docs/7.57/md/abenstring_functions_common_paras.md
---
title: "Continue"
description: |
  string_func - case(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_case.htm) string_func - occ(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_occ.htm) string_func - off, len(https://help.sap.com/doc/abapdocu_757_index_htm/7.57
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_common_paras.htm"
abapFile: "abenstring_functions_common_paras.htm"
keywords: ["do", "if", "case", "data", "abenstring", "functions", "common", "paras"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm) →  [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_expr_func.htm) →  [String Functions (string\_func)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: string_func - Shared Parameters, ABENSTRING_FUNCTIONS_COMMON_PARAS, 757%0D%0A%0D%0AEr
ror:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

string\_func - Shared Parameters

The following parameters are shared by multiple [string functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions.htm) and in [predicate functions for character-like arguments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpredicate_functions_strgs.htm) and have the same effect:

-   [case - Case](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_case.htm)
-   [occ - Occurrence](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_occ.htm)
-   [off, len - Offset and length](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_off_len.htm)
-   [regex - Regular expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_regex.htm)
-   [sub - Substring](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_sub.htm)
-   [val - Input value](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_val.htm)

Continue
[string\_func - case](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_case.htm)
[string\_func - occ](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_occ.htm)
[string\_func - off, len](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_off_len.htm)
[string\_func - pcre, xpath](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_regex.htm)
[string\_func - sub](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_sub.htm)
[string\_func - val](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_val.htm)